# python-startkit

./: README.md  pyproject.toml  requirements.txt
src/: main.py  settings.py
src/apis/: __init__.py  base.py
src/interfaces/: __init__.py  base.py
