[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phyton-startkit"
version = "1.0.00"
description = "Learning pyhton"
authors = [{ name = "Daniel Santana", email = "daniel.santana@humaitrix.com" }]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "pydantic-settings",
  "python-dotenv",
]
